# RedNarrate

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml
data/acme_pentest/: burp_issues.xml  ffuf_results.json  nessus_scan.nessus  nmap_scan.xml  nuclei_results.jsonl  wpscan_results.json  zap_report.xml
data/samples/: burp_issues.xml
knowledge/remediation/: default_credentials.md  reflected_xss.md  sql_injection.md
src/rednarrate/: __init__.py  config.py  graph.py  llm.py  state.py
src/rednarrate/agents/: __init__.py  correlation.py  ingestion.py  report_writer.py  scoring.py
src/rednarrate/api/: app.py
src/rednarrate/cli/: main.py
src/rednarrate/db/: repository.py  schema.sql
tests/: conftest.py  test_api.py  test_audit_hardening.py  test_burp_parser.py  test_cli.py  test_correlation.py  test_db.py  test_ingest.py  test_nmap_parser.py  test_parsers_nessus_zap.py  test_parsers_new_tools.py  test_pipeline_e2e.py  test_rag.py  test_renderer.py  test_report_writer.py  test_scoring.py  test_security.py  test_sqlmap_parser.py
tests/fixtures/: burp_malformed.xml  burp_no_b64.xml  ffuf_sample.json  gobuster_sample.json  gobuster_sample.txt  nessus_malformed.nessus  nessus_multi_host.nessus  nessus_sample.nessus  nessus_xxe_payload.nessus  nmap_empty_host.xml  nmap_full.xml  nmap_truncated.xml  nuclei_malformed.jsonl  nuclei_sample.jsonl  wpscan_malformed.json  wpscan_many_plugins.json  wpscan_no_vulns.json  wpscan_sample.json  zap_malformed.xml  zap_multi_site.xml  zap_sample.xml  zap_xxe_payload.xml
(+30 files in other folders)
